// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`command payload schemas The schema for command ADD_USER_TO_GROUP should have the expected value 1`] = `
Object {
  "groupId": Object {
    "coscradDataType": "UUID",
    "isArray": false,
    "isOptional": false,
  },
  "userId": Object {
    "coscradDataType": "UUID",
    "isArray": false,
    "isOptional": false,
  },
}
`;

exports[`command payload schemas The schema for command CREATE_BOOK_BIBLIOGRAPHIC_REFERENCE should have the expected value 1`] = `
Object {
  "abstract": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": true,
  },
  "creators": Object {
    "coscradDataType": Object {
      "name": Object {
        "coscradDataType": "NON_EMPTY_STRING",
        "isArray": false,
        "isOptional": false,
      },
      "type": Object {
        "coscradDataType": "ENUM",
        "enumLabel": "Creator Type",
        "enumName": "BIBLIOGRAPHIC_SUBJECT_CREATOR_TYPE",
        "isArray": false,
        "isOptional": false,
        "labelsAndValues": Array [
          Object {
            "label": "artist",
            "value": "artist",
          },
          Object {
            "label": "author",
            "value": "author",
          },
          Object {
            "label": "director",
            "value": "director",
          },
        ],
      },
    },
    "isArray": true,
    "isOptional": false,
  },
  "id": Object {
    "coscradDataType": "UUID",
    "isArray": false,
    "isOptional": false,
  },
  "isbn": Object {
    "coscradDataType": "ISBN",
    "isArray": false,
    "isOptional": true,
  },
  "numberOfPages": Object {
    "coscradDataType": "POSITIVE_INTEGER",
    "isArray": false,
    "isOptional": true,
  },
  "place": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": true,
  },
  "publisher": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": true,
  },
  "rawData": Object {
    "coscradDataType": "RAW_DATA",
    "isArray": false,
    "isOptional": true,
  },
  "title": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": false,
  },
  "url": Object {
    "coscradDataType": "URL",
    "isArray": false,
    "isOptional": true,
  },
  "year": Object {
    "coscradDataType": "YEAR",
    "isArray": false,
    "isOptional": true,
  },
}
`;

exports[`command payload schemas The schema for command CREATE_COURT_CASE_BIBLIOGRAPHIC_REFERENCE should have the expected value 1`] = `
Object {
  "abstract": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": true,
  },
  "caseName": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": false,
  },
  "court": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": true,
  },
  "dateDecided": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": true,
  },
  "id": Object {
    "coscradDataType": "UUID",
    "isArray": false,
    "isOptional": false,
  },
  "pages": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": true,
  },
  "rawData": Object {
    "coscradDataType": "RAW_DATA",
    "isArray": false,
    "isOptional": true,
  },
  "url": Object {
    "coscradDataType": "URL",
    "isArray": false,
    "isOptional": true,
  },
}
`;

exports[`command payload schemas The schema for command CREATE_JOURNAL_ARTICLE_BIBLIOGRAPHIC_REFERENCE should have the expected value 1`] = `
Object {
  "abstract": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": true,
  },
  "creators": Object {
    "coscradDataType": Object {
      "name": Object {
        "coscradDataType": "NON_EMPTY_STRING",
        "isArray": false,
        "isOptional": false,
      },
      "type": Object {
        "coscradDataType": "ENUM",
        "enumLabel": "Creator Type",
        "enumName": "BIBLIOGRAPHIC_SUBJECT_CREATOR_TYPE",
        "isArray": false,
        "isOptional": false,
        "labelsAndValues": Array [
          Object {
            "label": "artist",
            "value": "artist",
          },
          Object {
            "label": "author",
            "value": "author",
          },
          Object {
            "label": "director",
            "value": "director",
          },
        ],
      },
    },
    "isArray": true,
    "isOptional": false,
  },
  "doi": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": true,
  },
  "id": Object {
    "coscradDataType": "UUID",
    "isArray": false,
    "isOptional": false,
  },
  "issn": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": true,
  },
  "issueDate": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": false,
  },
  "pages": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": true,
  },
  "publicationTitle": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": true,
  },
  "rawData": Object {
    "coscradDataType": "RAW_DATA",
    "isArray": false,
    "isOptional": true,
  },
  "title": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": false,
  },
  "url": Object {
    "coscradDataType": "URL",
    "isArray": false,
    "isOptional": true,
  },
}
`;

exports[`command payload schemas The schema for command CREATE_MEDIA_ITEM should have the expected value 1`] = `
Object {
  "contributions": Object {
    "coscradDataType": Object {
      "contributorId": Object {
        "coscradDataType": "NON_EMPTY_STRING",
        "isArray": false,
        "isOptional": false,
      },
      "role": Object {
        "coscradDataType": "NON_EMPTY_STRING",
        "isArray": false,
        "isOptional": false,
      },
    },
    "isArray": true,
    "isOptional": false,
  },
  "id": Object {
    "coscradDataType": "UUID",
    "isArray": false,
    "isOptional": false,
  },
  "mimeType": Object {
    "coscradDataType": "ENUM",
    "enumLabel": "MIME Type",
    "enumName": "MIME_TYPE",
    "isArray": false,
    "isOptional": false,
    "labelsAndValues": Array [
      Object {
        "label": "mp3",
        "value": "audio/mpeg",
      },
      Object {
        "label": "mp4",
        "value": "video/mp4",
      },
    ],
  },
  "rawData": Object {
    "coscradDataType": "RAW_DATA",
    "isArray": false,
    "isOptional": true,
  },
  "title": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": true,
  },
  "titleEnglish": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": true,
  },
  "url": Object {
    "coscradDataType": "URL",
    "isArray": false,
    "isOptional": false,
  },
}
`;

exports[`command payload schemas The schema for command CREATE_SONG should have the expected value 1`] = `
Object {
  "audioURL": Object {
    "coscradDataType": "URL",
    "isArray": false,
    "isOptional": false,
  },
  "contributions": Object {
    "coscradDataType": Object {
      "contributorId": Object {
        "coscradDataType": "NON_EMPTY_STRING",
        "isArray": false,
        "isOptional": false,
      },
      "role": Object {
        "coscradDataType": "NON_EMPTY_STRING",
        "isArray": false,
        "isOptional": false,
      },
    },
    "isArray": true,
    "isOptional": false,
  },
  "id": Object {
    "coscradDataType": "UUID",
    "isArray": false,
    "isOptional": false,
  },
  "lyrics": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": true,
  },
  "rawData": Object {
    "coscradDataType": "RAW_DATA",
    "isArray": false,
    "isOptional": true,
  },
  "title": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": true,
  },
  "titleEnglish": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": true,
  },
}
`;

exports[`command payload schemas The schema for command CREATE_USER_GROUP should have the expected value 1`] = `
Object {
  "description": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": false,
  },
  "id": Object {
    "coscradDataType": "UUID",
    "isArray": false,
    "isOptional": false,
  },
  "label": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": false,
  },
}
`;

exports[`command payload schemas The schema for command GRANT_RESOURCE_READ_ACCESS_TO_USER should have the expected value 1`] = `
Object {
  "resourceCompositeIdentifier": Object {
    "coscradDataType": "COMPOSITE_IDENTIFIER",
    "isArray": false,
    "isOptional": false,
  },
  "userId": Object {
    "coscradDataType": "UUID",
    "isArray": false,
    "isOptional": false,
  },
}
`;

exports[`command payload schemas The schema for command GRANT_USER_ROLE should have the expected value 1`] = `
Object {
  "role": Object {
    "coscradDataType": "ENUM",
    "enumLabel": "User Role",
    "enumName": "COSCRAD_USER_ROLE",
    "isArray": false,
    "isOptional": false,
    "labelsAndValues": Array [
      Object {
        "label": "admin",
        "value": "projectAdmin",
      },
      Object {
        "label": "viewer",
        "value": "viewer",
      },
      Object {
        "label": "COSCRAD admin",
        "value": "superAdmin",
      },
    ],
  },
  "userId": Object {
    "coscradDataType": "UUID",
    "isArray": false,
    "isOptional": false,
  },
}
`;

exports[`command payload schemas The schema for command PUBLISH_MEDIA_ITEM should have the expected value 1`] = `
Object {
  "id": Object {
    "coscradDataType": "UUID",
    "isArray": false,
    "isOptional": false,
  },
}
`;

exports[`command payload schemas The schema for command PUBLISH_SONG should have the expected value 1`] = `
Object {
  "id": Object {
    "coscradDataType": "UUID",
    "isArray": false,
    "isOptional": false,
  },
}
`;

exports[`command payload schemas The schema for command REGISTER_USER should have the expected value 1`] = `
Object {
  "id": Object {
    "coscradDataType": "UUID",
    "isArray": false,
    "isOptional": false,
  },
  "userIdFromAuthProvider": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": false,
  },
  "username": Object {
    "coscradDataType": "NON_EMPTY_STRING",
    "isArray": false,
    "isOptional": false,
  },
}
`;
